StaticsTest1 passes with rbclassload2. see below.
1. type numbering now works properly when interfaces
   are appended to a class hierarchy below a base class
2. HierarchyValue switch now captures the whole hierarchy